# Rust4ui

./: .gitignore  AGENTS.md  AUTOPILOT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md  ROADMAP.md  SESSIONS.md  SUMMARY.md  TECHNICAL_SPECIFICATION.md  ___docs.bat  ___run.bat  __run.bat  autopilot_state.json  opencode.json
.opencode/plans/: fix-5-issues.md
demo/: settings.json  theme.json  ui.json
demo/tabs/: all.json  basic.json  containers.json  dash.json  i18n.json  icons.json  input.json  menus.json  windows.json
demo/themes/: dj_green.json  light.json
demo/windows/: confirm_dialog.json  custom_panel.json  info_window.json
docs/: book.toml
docs/src/: 01-intro.md  02-quickstart.md  03-architecture.md  04-ui-json.md  05-theme-json.md  06-icons.md  07-actions.md  08-state.md  09-locale.md  10-border.md  11-hover-click.md  12-shadows.md  13-hot-reload.md  14-examples.md  15-menu-children.md  SUMMARY.md
examples/: demo.rs
icons/: README.md  icons.json
locales/: en.json  ru.json
src/: actions.rs  border.rs  contrast.rs  icons.rs  lib.rs  locale.rs  logger.rs  main.rs  node.rs  plural.rs  ref_resolver.rs  renderer.rs  state.rs  theme.rs  validator.rs
src/widgets/: base.rs  button.rs  caption.rs  checkbox.rs  color_picker.rs  column.rs  combo_box.rs  context_menu.rs  file_drop.rs  grid.rs  hyperlink.rs  icon_bar.rs  icon_button.rs  indicator.rs  label.rs  menu.rs  menu_bar.rs  menu_item.rs  mod.rs  notifications.rs  panel.rs  radio_group.rs  row.rs  scroll_area.rs  shortcut.rs  (+9 more)
tests/: encoding.rs  integration.rs  persistence.rs  smoke.rs
(+4 files in other folders)
