[package]
name = "rust4ui"
version = "0.3.0"
edition = "2021"
description = "JSON to UI — rapid prototyping and UI assembly on egui"
license = "MIT"
repository = "https://github.com/devZu9/rust4ui"

[dependencies]
egui = "0.32"
eframe = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
notify = "8"
regex-lite = "0.1"

[dev-dependencies]
walkdir = "2"
